--- a/surveylib/src/main/res/layout/fragment_end.xml
+++ b/surveylib/src/main/res/layout/fragment_end.xml
@@ -15,21 +15,22 @@
         android:layout_marginTop="96dp"
         android:gravity="center"
         android:text="New Text"
-        android:textColor="#333"
+        android:textColor="@color/survey_text"
         android:textIsSelectable="false"
         android:textSize="16sp" />
 
     <Button
         android:id="@+id/button_finish"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_gravity="center_horizontal"
-        android:background="@android:color/holo_green_dark"
-        android:text="@string/finish"
-        android:textColor="#FFF"
+        android:background="@color/survey_button_bg"
+        android:padding="16dp"
+        android:text="@string/x_finish"
+        android:textColor="@color/survey_button_text"
         android:textSize="16sp" />
 
 </RelativeLayout>
