--- a/surveylib/src/main/res/layout/footer.xml
+++ b/surveylib/src/main/res/layout/footer.xml
@@ -7,10 +7,11 @@
     <Button
         android:id="@+id/button_continue"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="#669900"
-        android:text="@string/xcontinue"
-        android:textColor="#FFF"
+        android:background="@color/survey_button_bg"
+        android:padding="16dp"
+        android:text="@string/x_continue"
+        android:textColor="@color/survey_button_text"
         android:textSize="16sp" />
 </LinearLayout>
