--- a/surveylib/src/main/res/layout/fragment_checkboxes.xml
+++ b/surveylib/src/main/res/layout/fragment_checkboxes.xml
@@ -24,7 +24,7 @@
                 android:lineSpacingMultiplier="1.2"
                 android:padding="16dp"
                 android:text="Title"
-                android:textColor="#333"
+                android:textColor="@color/survey_text"
                 android:textSize="16sp" />
 
             <LinearLayout
@@ -37,9 +37,7 @@
 
         </LinearLayout>
 
-
     </ScrollView>
-
 
     <include
         layout="@layout/footer"
