--- a/surveylib/src/main/res/layout/fragment_text_multiline.xml
+++ b/surveylib/src/main/res/layout/fragment_text_multiline.xml
@@ -20,11 +20,10 @@
                 style="?android:textAppearanceMedium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
                 android:lineSpacingMultiplier="1.2"
                 android:padding="16dp"
                 android:text="Title"
-                android:textColor="#333"
+                android:textColor="@color/survey_text"
                 android:textSize="16sp" />
 
             <EditText
@@ -37,14 +36,11 @@
                 android:lines="3" />
         </LinearLayout>
 
-
     </ScrollView>
-
 
     <include
         layout="@layout/footer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></include>
-
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
