--- a/surveylib/src/main/res/layout/fragment_text_simple.xml
+++ b/surveylib/src/main/res/layout/fragment_text_simple.xml
@@ -24,7 +24,7 @@
                 android:lineSpacingMultiplier="1.2"
                 android:padding="16dp"
                 android:text="Title"
-                android:textColor="#333"
+                android:textColor="@color/survey_text"
                 android:textSize="16sp" />
 
             <EditText
@@ -35,14 +35,11 @@
                 android:layout_marginRight="16dp" />
         </LinearLayout>
 
-
     </ScrollView>
-
 
     <include
         layout="@layout/footer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></include>
-
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
