--- a/surveylib/src/main/res/layout/library_bottom_dialog.xml
+++ b/surveylib/src/main/res/layout/library_bottom_dialog.xml
@@ -14,11 +14,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
+        android:orientation="vertical"
         android:padding="20dp"
         android:paddingBottom="16dp"
-        android:paddingStart="26dp"
         android:paddingEnd="26dp"
-        android:orientation="vertical">
+        android:paddingStart="26dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,18 +28,19 @@
 
             <ImageView
                 android:id="@+id/bottomDialog_icon"
-                android:visibility="gone"
                 android:layout_width="42dp"
                 android:layout_height="42dp"
-                android:layout_marginRight="20dp" />
+                android:layout_marginRight="20dp"
+                android:visibility="gone" />
+
             <TextView
                 android:id="@+id/bottomDialog_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:alpha="0.8"
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:alpha="0.8" />
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -52,20 +53,21 @@
                 android:id="@+id/bottomDialog_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:alpha="0.7"
                 android:textColor="@android:color/black"
-                android:textSize="16sp"
-                android:alpha="0.7" />
+                android:textSize="16sp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <FrameLayout
                 android:id="@+id/bottomDialog_custom_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            </FrameLayout>
+                android:layout_height="wrap_content" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -77,18 +79,19 @@
 
             <Button
                 android:id="@+id/bottomDialog_cancel"
-                android:visibility="gone"
+                style="@style/Button.Flat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/Button.Flat"
-                android:text="@android:string/cancel"/>
+                android:text="@android:string/cancel"
+                android:visibility="gone" />
+
             <Button
                 android:id="@+id/bottomDialog_ok"
-                android:visibility="gone"
+                style="@style/Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/Button"
-                android:text="@android:string/ok"/>
+                android:text="@android:string/ok"
+                android:visibility="gone" />
 
         </LinearLayout>
 
