--- a/surveylib/src/main/res/values/colors.xml
+++ b/surveylib/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="survey_button_bg">#303F9F</color>
     <color name="survey_button_text">#FFFFFF</color>
     <color name="survey_text">#000000</color>
+
+    <color name="white">#FFFFFF</color>
 </resources>
