--- a/surveylib/src/main/res/layout/fragment_image.xml
+++ b/surveylib/src/main/res/layout/fragment_image.xml
@@ -56,7 +56,6 @@
     <include
         layout="@layout/footer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
