--- a/surveylib/src/main/res/values/colors.xml
+++ b/surveylib/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="survey_text">#000000</color>
 
     <color name="white">#FFFFFF</color>
+    <color name="black_transparent">#33000000</color>
 </resources>
