--- a/surveylib/src/main/res/layout/fragment_text_simple.xml
+++ b/surveylib/src/main/res/layout/fragment_text_simple.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -7,8 +7,8 @@
     <ScrollView
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/liBottom">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,8 +38,12 @@
     </ScrollView>
 
     <include
+        android:id="@+id/liBottom"
         layout="@layout/footer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
 
-</LinearLayout>
+    <include layout="@layout/progress_view" />
+
+</RelativeLayout>
