--- a/surveylib/src/main/res/values/colors.xml
+++ b/surveylib/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="survey_text">#000000</color>
 
     <color name="white">#FFFFFF</color>
+    <color name="red">#ff4435</color>
     <color name="black_transparent">#33000000</color>
 </resources>
