--- a/surveylib/src/main/res/layout/fragment_image.xml
+++ b/surveylib/src/main/res/layout/fragment_image.xml
@@ -36,12 +36,13 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="28dp"
-                    android:src="@android:drawable/picture_frame" />
+                    android:src="@drawable/alerter_ic_face" />
 
                 <TextView
                     android:id="@+id/editText_answer"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="28dp"
+                    android:layout_marginLeft="4dp"
                     android:clickable="true"
                     android:text="Choose Image"
                     android:textColor="@color/colorPrimaryDark"
