--- a/surveylib/src/main/res/layout/fragment_start.xml
+++ b/surveylib/src/main/res/layout/fragment_start.xml
@@ -4,16 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <Button
+    <android.support.v7.widget.AppCompatButton
         android:id="@+id/button_continue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
+        android:gravity="center"
         android:layout_alignParentStart="true"
         android:layout_gravity="center_horizontal"
-        android:background="@color/survey_button_bg"
-        android:padding="16dp"
+        android:padding="18dp"
         android:text="@string/x_start"
         android:textColor="@color/survey_button_text"
         android:textSize="16sp" />
