--- a/surveylib/src/main/res/layout/fragment_end.xml
+++ b/surveylib/src/main/res/layout/fragment_end.xml
@@ -19,16 +19,16 @@
         android:textIsSelectable="false"
         android:textSize="16sp" />
 
-    <Button
+    <android.support.v7.widget.AppCompatButton
         android:id="@+id/button_finish"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:gravity="center"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_gravity="center_horizontal"
-        android:background="@color/survey_button_bg"
-        android:padding="16dp"
+        android:padding="18dp"
         android:text="@string/x_finish"
         android:textColor="@color/survey_button_text"
         android:textSize="16sp" />
