--- a/surveylib/src/main/res/layout/fragment_end.xml
+++ b/surveylib/src/main/res/layout/fragment_end.xml
@@ -4,6 +4,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/button_finish"
+        android:layout_margin="3dp"
+        android:scrollbars="none" />
+
     <TextView
         android:id="@+id/textView_end"
         android:layout_width="wrap_content"
@@ -17,17 +25,18 @@
         android:text="New Text"
         android:textColor="@color/survey_text"
         android:textIsSelectable="false"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:visibility="gone" />
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/button_finish"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:gravity="center"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_gravity="center_horizontal"
+        android:gravity="center"
         android:padding="18dp"
         android:text="@string/x_finish"
         android:textColor="@color/survey_button_text"
