--- a/surveylib/src/main/res/layout/activity_main_survey.xml
+++ b/surveylib/src/main/res/layout/activity_main_survey.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <in.myinnos.surveylib.widgets.NoSwipeViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    <in.myinnos.surveylib.widgets.NoSwipeViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
