fixed bugs | end view

--- a/surveylib/src/main/res/layout/list_relam_data.xml
+++ b/surveylib/src/main/res/layout/list_relam_data.xml
@@ -54,8 +54,7 @@
                         android:gravity="left"
                         android:text=", Andhra Pradesh"
                         android:textColor="#000"
-                        android:textSize="14sp"
-                        android:textStyle="italic" />
+                        android:textSize="14sp" />
 
                 </LinearLayout>
 
