fixed manifest error

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,14 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="in.myinnos.formsurveys.MainActivity">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btSurveyForm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center|center_horizontal"
         android:text="Survey Form"
         android:textColor="@color/white" />
 
