--- a/surveylib/src/main/res/values/colors.xml
+++ b/surveylib/src/main/res/values/colors.xml
@@ -12,4 +12,9 @@
     <color name="white">#FFFFFF</color>
     <color name="red">#ff4435</color>
     <color name="black_transparent">#33000000</color>
+
+    <color name="option_pressed">#e9e4e4</color>
+    <color name="option_text_pressed">#000000</color>
+    <color name="option_text">#080808</color>
+
 </resources>
