--- a/surveylib/src/main/res/values/styles.xml
+++ b/surveylib/src/main/res/values/styles.xml
@@ -44,4 +44,17 @@
         <item name="android:layout_marginLeft">@dimen/btn_margin</item>
         <item name="android:layout_marginRight">@dimen/btn_margin</item>
     </style>
+
+    <style name="option" >
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingLeft">15dp</item>
+        <item name="android:paddingRight">15dp</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/option_text_selector</item>
+
+    </style>
+
 </resources>
