--- a/surveylib/src/main/res/values/colors.xml
+++ b/surveylib/src/main/res/values/colors.xml
@@ -9,7 +9,9 @@
     <color name="survey_button_text">#FFFFFF</color>
     <color name="survey_text">#000000</color>
 
+    <color name="green">#2ed8b6</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
     <color name="red">#ff4435</color>
     <color name="black_transparent">#33000000</color>
 
