--- a/surveylib/src/main/res/layout/fragment_number.xml
+++ b/surveylib/src/main/res/layout/fragment_number.xml
@@ -16,6 +16,14 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/txCount"
+                android:layout_width="match_parent"
+                android:text="@string/app_name"
+                android:padding="10dp"
+                android:gravity="right"
+                android:layout_height="wrap_content" />
+
+            <TextView
                 android:id="@+id/textview_q_title"
                 style="?android:textAppearanceMedium"
                 android:layout_width="match_parent"
