--- a/surveylib/src/main/res/layout/fragment_text_multiline.xml
+++ b/surveylib/src/main/res/layout/fragment_text_multiline.xml
@@ -4,6 +4,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/txCount"
+        android:layout_width="match_parent"
+        android:text="@string/app_name"
+        android:padding="10dp"
+        android:gravity="right"
+        android:layout_height="wrap_content" />
+
     <ScrollView
         android:id="@+id/content"
         android:layout_width="match_parent"
